specs/stage/web/dashboard/dashboard.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: ilink
  labels:
    app: dashboard
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: dashboard
