specs/stage/web/dashboard/dashboard.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dashboard
  namespace: ilink
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ilink-dashboard-tls
      hosts:
        - 'dashboard.ilink.pw'
