specs/stage/web/dashboard/dashboard.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
  namespace: ilink
spec:
  hosts:
    - 'dashboard.ilink.pw'
  gateways:
    - dashboard
  http:
    - route:
        - destination:
            host: dashboard
            port:
              number: 3000
